# TinyZero_QWen3.5

./: .gitignore  CLAUDE.md  LICENSE  entry.py  pyproject.toml  requirements.txt
docs/: setup_guide.md
experiments/: README.md
experiments/2026-03-30_baseline/: run.sh
experiments/2026-03-30_qwen3_grpo/: run.sh
experiments/2026-03-30_vllm_grpo/: run.sh
experiments/2026-03-31_grpo_baseline/: README.md  run.sh
experiments/2026-03-31_grpo_countdown/: README.md  run.sh
experiments/2026-03-31_vllm_grpo/: run.sh
experiments/2026-04-01_vllm_grpo_v2/: notes.md  run.sh
experiments/2026-04-02_vllm_grpo_v3/: run.sh
patches/: verl_0.7.1_add_advantage_std_metric.patch
scripts/: prepare_data.py  setup_env.sh  train_grpo.sh
src/reward/: __init__.py  countdown.py
src/templates/: __init__.py  countdown.py
src/utils/: __init__.py  tokenizer.py
