[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyzero-qwen3"
version = "0.1.0"
description = "TinyZero GRPO 学习项目 - 使用 Qwen3-1.7B-Base 复现 grokking"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["src*"]
